# GA

./: .travis.yml  IA-GA.html  LICENSE  README.md  doc-index.html  ga.cabal  index.html  mini_IA-GA.html
benchmark/: Benchmark.hs
config/: publish_doc.sh  travisci_rsa.enc
src/IA/: GA.hs
test/: Spec.hs
