name:                ga
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/dlgd/ga#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Gazard
maintainer:          daniel.gazard@gmail.com
copyright:           Copyright (c) 2017, Daniel Gazard
category:            AI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IA.GA
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , random
  default-language:    Haskell2010

test-suite ga-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ga
                     , containers
                     , random
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark benchmark
  type: exitcode-stdio-1.0
  main-is: Benchmark.hs
  hs-source-dirs:
      benchmark
  default-language: Haskell2010
  ghc-options:    -O2 -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
                base
              , ga
              , criterion
              , containers
              , random

source-repository head
  type:     git
  location: https://github.com/dlgd/ga
